fix: add overlay for button so that it will be clickable even if covered by image

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body {
 }
 
 .control_panel {
+    position: relative;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -101,9 +102,8 @@ body {
 
 .kargin__photo {
     /*position: absolute;*/
-    height: 100%;
+    height: 50vh;
     /*width: auto;*/
-
 }
 
 input::-webkit-outer-spin-button,
@@ -160,6 +160,18 @@ input[type=number]{
     content: '';
     z-index: -1;
     border-radius: 32px;
+}
+
+.start_button_overflow {
+    position: absolute;
+    width: 24vw;
+    padding: 30px;
+    height: 16.5vh;
+    bottom: 0;
+    left: 4vw;
+    top: 18vh;
+    z-index: 10;
+    cursor: pointer;
 }
 
 .start_button:disabled {
